--- a/working/index.css
+++ b/working/index.css
@@ -19,7 +19,7 @@
 .head-title{
     text-align: center;
     padding: 2rem;
-    color: blue;
+    color: gray;
     font-size: 5rem;
     font-weight: bold;
 }
@@ -42,4 +42,8 @@
     border-radius: 5px;
     margin-bottom: 15px;
     font-size: 1.5rem;
+}
+h1{
+    color: blue;
+    font-size: 3rem;
 }
