--- a/case02/index.css
+++ b/case02/index.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     background-color: gray;
+    font-family: "Poppins", sans-serif;
 }
 .container{
     padding: 5rem;
